style fixes after java 17 upgrade