@@ -5,7 +5,6 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public final class FilePathResolver {
@@ -23,12 +22,12 @@ public final class FilePathResolver {
         .flatMap(path -> {
           try (Stream<Path> walk = Files.walk(path)) {
             return walk.filter(Files::isRegularFile)
-                .collect(Collectors.toList())
+                .toList()
                 .stream();
           } catch (IOException exception) {
             throw new CarmlJarException(String.format("Exception occurred while reading path %s", path), exception);
           }
         })
-        .collect(Collectors.toList());
+        .toList();
   }
 }
